lesson-5/ingress-yaml-example.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: NAME

# Для хостов
spec:
  rules:
    - host: HOST_NAME
      http:
        paths:
          - backend:
              serviceName: SERVICE_NAME
              servicePort: PORT_NUM

# Для путей
spec:
  rules:
    - host: HOST_NAME
      http:
        paths:
          - path: "/path"
            backend:
              serviceName: SERVICE_NAME
              servicePort: PORT_NUM
